--- a/Project2.html
+++ b/Project2.html
@@ -10,14 +10,16 @@
 
 
 <body><EM>
-
-		<H2>
+	<nav> 
+		<H2 id="navbar">
 			<a href="http://stu.cbu.edu/~nmutasa/Project2.html">HOME</a>
 			<a href="#res">RESERVATIONS</a>
 			<a href="#rev">REVIEWS</a>
 			<a href="http://stu.cbu.edu/~nmutasa/About.html">ABOUT</a>
 			<a href="http://stu.cbu.edu/~nmutasa/Contact.html">CONTACT</a>
 		</H2>
+	</nav>
+		
 
 		<center><img src="logo.png" vspace=5></center>
 		<H4>A Sustainable, Fine Dining Experience.</H4>
