--- a/Project2.html
+++ b/Project2.html
@@ -12,23 +12,23 @@
 <body><EM>
 	<nav> 
 		<H2 id="navbar">
-			<a href="http://stu.cbu.edu/~nmutasa/Project2.html">HOME</a>
-			<a href="#res">RESERVATIONS</a>
-			<a href="#rev">REVIEWS</a>
-			<a href="http://stu.cbu.edu/~nmutasa/About.html">ABOUT</a>
-			<a href="http://stu.cbu.edu/~nmutasa/Contact.html">CONTACT</a>
+			<a href="http://stu.cbu.edu/~nmutasa/Project2.html" class="navlink">HOME</a>
+			<a href="#res" class="navlink">RESERVATIONS</a>
+			<a href="#rev" class="navlink">REVIEWS</a>
+			<a href="http://stu.cbu.edu/~nmutasa/About.html" class="navlink">ABOUT</a>
+			<a href="http://stu.cbu.edu/~nmutasa/Contact.html" class="navlink">CONTACT</a>
 		</H2>
 	</nav>
 		
 
 		<center><img src="logo.png" vspace=5></center>
 		<H4>A Sustainable, Fine Dining Experience.</H4>
-		<BR><BR>
-		<BR><BR>
-		<BR><BR>
-		<BR><BR>
-		<BR><BR>
 
+		<BR><BR>
+		<BR><BR>
+		<BR><BR>
+		<BR><BR>
+		<BR><BR>
 
 		<a name="res">
 			<H2>RESERVATIONS</H2>
