tried to fix the contact.html

--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,9 @@
 <body><EM>
 
 		<H1>CONTACT US</H1>
-		<center><img align="right" src="logo.png" vspace=5 hspace=2></center>
+		<div id="logo">
+			<img align="right" src="logo.png" vspace=5 hspace=2 id="logo">
+		</div>>
 
 		<p>Location: 1922 Tuxedo St.</p>
 
