worked on the contact tab

--- a/Contact.html
+++ b/Contact.html
@@ -10,45 +10,45 @@
 
 
 <body><EM>
-
 		<H1>CONTACT US</H1>
-		<div id="logo">
-			<img align="right" src="logo.png" vspace=5 hspace=2 id="logo">
-		</div>>
+		<div class="grid-container">
+			<div id="object1">
+				<img src="logo.png" vspace=5 hspace=2 id="logo">
+			</div>
+			<div id="object2">
+				<p>Location: 1922 Tuxedo St.</p>
+				<a name="fav">
+				<p>Hours of Operation:</p>
+				<table border width=400>
+					<tr>
+						<th width=70%>Days</th>
+						<th width=30%>Hours</th>
+					</tr>
+					<tr>
+						<td>MON-THUR</td>
+						<td>12pm - 6pm</td>
+					</tr>
+					<tr>
+						<td>FRI</td>
+						<td>12pm - 7pm</td>
+					</tr>
+					<tr>
+						<td>SAT</td>
+						<td>12pm - 9pm</td>
+					</tr>
+					<tr>
+						<td>SUN</td>
+						<td>Closed</td>
+					</tr>
+				</table>	
+			</div>
+			<div id="object3">
+				<p>Email: <a href="mailto:nmutasa@cbu.edu">farmtofork@dinerscoalition.org</a></p>
+				<p>Phone: +1(404)-222-1922</p>
+				<P>Follow Us on Twitter and Facebook!</p>
+			</div>
 
-		<p>Location: 1922 Tuxedo St.</p>
-
-		<a name="fav">
-			<p>Hours of Operation:</p>
-			<table border width=400>
-				<tr>
-					<th width=70%>Days</th>
-					<th width=30%>Hours</th>
-				</tr>
-				<tr>
-					<td>MON-THUR</td>
-					<td>12pm - 6pm</td>
-				</tr>
-				<tr>
-					<td>FRI</td>
-					<td>12pm - 7pm</td>
-				</tr>
-				<tr>
-					<td>SAT</td>
-					<td>12pm - 9pm</td>
-				</tr>
-				<tr>
-					<td>SUN</td>
-					<td>Closed</td>
-				</tr>
-			</table>
-
-			<BR>
-			<BR>
-
-			<p>Email: <a href="mailto:nmutasa@cbu.edu">farmtofork@dinerscoalition.org</a></p>
-			<p>Phone: +1(404)-222-1922</p>
-			<P>Follow Us on Twitter and Facebook!</p>
+		</div>
 
 			<H2>
 				<a href="http://stu.cbu.edu/~nmutasa/Project2.html">HOME</a>
